--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,8 @@
         android:theme="@style/AppTheme">
         <activity android:name=".ui.login.LoginFragment"></activity>
         <activity android:name=".ui.register.RegisterFragment" />
+        <activity android:name=".TicketsActivity" />
+        <activity android:name=".ui.tickets.TicketActivity" />
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
