--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.example.ticket_machine">
 
     <uses-permission android:name="android.permission.INTERNET" />
@@ -11,11 +12,13 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ui.accounts.AccountsActivity"></activity>
-        <activity android:name=".ui.login.LoginFragment" />
-        <activity android:name=".ui.register.RegisterFragment" />
+        <activity android:name=".ui.accounts.AccountsActivity"/>
+        <activity android:name=".ui.login.LoginFragment"/>
+        <activity android:name=".ui.register.RegisterFragment"/>
         <activity android:name=".TicketsActivity" />
         <activity android:name=".ui.tickets.TicketActivity" />
+        <activity android:name=".ScannerActivity" />
+        <activity android:name=".ui.scanner.ScannerEventsActivity" />
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
