--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,12 +15,13 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".ui.accounts.AccountsActivity"/>
-        <activity android:name=".ui.login.LoginFragment"/>
-        <activity android:name=".ui.register.RegisterFragment"/>
+        <activity android:name=".ui.login.LoginFragment" tools:ignore="Instantiatable" />
+        <activity android:name=".ui.register.RegisterFragment" tools:ignore="Instantiatable" />
         <activity android:name=".TicketsActivity" />
         <activity android:name=".ui.tickets.TicketActivity" />
         <activity android:name=".ScannerActivity" />
         <activity android:name=".ui.scanner.ScannerEventsActivity" />
+        <activity android:name=".ui.events_manage.EventsManageActivity"/>
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
